syntax = "proto3";

package core;

import "core/checkbox_message.proto";

option go_package = "tenkhours/proto/pb/core";

message Goal {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string character_id = 4;
  string name = 5;
  string description = 6;
  int64 start_time = 7;
  int64 end_time = 8;
  GoalStatus status = 9;
  repeated GoalMetric metrics = 10;
  repeated Checkbox checkboxes = 11;
}

message GoalMetric {
  string id = 1;
  MetricCondition condition = 5;
  optional double target_value = 6;
  optional Range range_value = 7;
}

message Range {
  double min = 1;
  double max = 2;
}

// Input Messages
message GoalInput {
  optional string id = 1;
  string name = 2;
  optional string description = 3;
  int64 start_time = 4;
  int64 end_time = 5;
  repeated GoalMetricInput metrics = 6;
  repeated CheckboxInput checkboxes = 7;
}

message GoalMetricInput {
  string id = 1;
  MetricCondition condition = 2;
  optional double target_value = 3;
  optional RangeInput range_value = 4;
}

message RangeInput {
  double min = 1;
  double max = 2;
}

// Enums
enum MetricCondition {
  lt = 0;
  lte = 1;
  eq = 2;
  gte = 3;
  gt = 4;
  ir = 5;
}

enum GoalStatus {
  Planned = 0;
  InProgress = 1;
  Completed = 2;
  Overdue = 3;
}
